src/styles/pages/About.module.css
@import url('../global.module.css');

@import url('../global.module.css');

@import url('../global.module.css');

.about {
	position: relative;
	min-height: 100vh;
	display: flex;
	justify-content: center;
	align-items: center;
	text-align: center;
	overflow: hidden;
	background-image: url('../../lib/images/about_background.png');
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
	background-attachment: fixed;
}

.about--webp::before {
	content: '';
	background-image: url('../../lib/images/about_background.webp');
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
	background-attachment: fixed;
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: -1;
}

.about__content {
	position: relative;
	max-width: 700px;
	padding: 1rem;
	background-color: rgba(34, 22, 57, 0.8);
	border: 2px solid var(--color-heading);
	border-radius: 10px;
	box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
	margin-top: 2rem;
	z-index: 1;
}

.about__heading {
	font-family: var(--font-heading);
	font-size: 3rem;
	color: var(--color-heading);
	margin-bottom: 0.5rem;
}

.about__headingAccent {
	font-family: var(--font-heading);
	font-size: 3rem;
	color: var(--color-action);
}

.about__subheading {
	font-family: var(--font-heading);
	font-size: 2rem;
	color: var(--color-heading);
	margin-bottom: 1rem;
}

.about__text {
	font-family: var(--font-body);
	font-size: var(--font-size-large);
	color: var(--color-text);
	margin-bottom: 1.5rem;
}

.about__button {
	display: inline-block;
	font-family: var(--font-body);
	font-size: var(--font-size-large);
	color: var(--color-text);
	background-color: var(--color-heading);
	padding: 0.5rem 1rem;
	border-radius: 5px;
	text-decoration: none;
	cursor: pointer;
}

.about__button a {
	color: var(--color-text);
	text-decoration: none;
}

.about__button:hover {
	background-color: var(--color-action);
	color: var(--color-text);
}

@media (min-width: 768px) {
	.about__content {
		text-align: left;
		align-self: flex-start;
	}

	.about__heading {
		font-size: 4.5rem;
	}

	.about__headingAccent {
		font-size: 4.5rem;
	}

	.about__subheading {
		font-size: 2rem;
	}

	.about__text {
		font-size: var(--font-size-extra-large);
	}
}

